--- a/modules/control-center-web/src/main/js/views/reset.jade
+++ b/modules/control-center-web/src/main/js/views/reset.jade
@@ -30,7 +30,7 @@ block container
                 .settings-row
                     label.col-sm-1.required Password:
                     .col-sm-3
-                        input#user_password.form-control(enter-focus-next enter-focus-next-id='user_confirm' type='password' ng-model='reset_info.password' placeholder='New password' required)
+                        input#user_password.form-control(enter-focus-next='user_confirm' type='password' ng-model='reset_info.password' placeholder='New password' required)
                 .settings-row
                     label.col-sm-1.required Confirm:
                     .col-sm-3
