--- a/modules/control-center-web/src/main/js/views/configuration/caches.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/caches.jade
@@ -48,30 +48,25 @@ block content
                         .panel-body
                             .settings-row(ng-repeat='field in general')
                                 +form-row('backupItem')
-            .panel-group(bs-collapse data-allow-multiple='true')
-                div(bs-collapse data-start-collapsed='true')
-                    .panel-title(ng-show='expanded')
-                        h3
-                            i.fa.fa-chevron-circle-up(ng-click='expanded = !expanded')
-                            a(bs-collapse-toggle='0' ng-click='expanded = !expanded') {{expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
-                    .panel-collapse(bs-collapse-target)
-                        .span(bs-collapse data-start-collapsed='true' data-allow-multiple='true')
-                            .panel.panel-default(ng-repeat='group in advanced' ng-hide='{{group.hide}}')
-                                .panel-heading
-                                    h3
-                                        a(bs-collapse-toggle) {{group.label}}
-                                        i.tipLabel.fa.fa-question-circle(ng-if='group.tip' bs-tooltip='joinTip(group.tip)' type='button')
-                                        i.tipLabel.fa.fa-question-circle.blank(ng-if='!group.tip')
-                                .panel-collapse(bs-collapse-target)
-                                    .panel-body
-                                        .settings-row(ng-repeat='field in group.fields')
-                                            +form-row('backupItem')
-                    .panel-title
-                        h3
-                            i.fa.fa-chevron-circle-up(ng-show='expanded' ng-click='expanded = !expanded')
-                            i.fa.fa-chevron-circle-down(ng-show='!expanded' ng-click='expanded = !expanded')
-                            a(bs-collapse-toggle='0' ng-click='expanded = !expanded') {{expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
-            div
+            div(ng-show='ui.expanded')
+                .advanced-options
+                    i.fa.fa-chevron-circle-up(ng-click='toggleExpanded()')
+                    a(ng-click='toggleExpanded()') {{ui.expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
+                .panel-group(bs-collapse data-allow-multiple='true' data-start-collapsed='true')
+                    .panel.panel-default(ng-repeat='group in advanced')
+                        .panel-heading
+                            h3
+                                a(bs-collapse-toggle) {{::group.label}}
+                        .panel-collapse(bs-collapse-target)
+                            .panel-body
+                                .settings-row(ng-repeat='field in group.fields')
+                                    +form-row('backupItem')
+            .advanced-options
+                i.fa.fa-chevron-circle-up(ng-show='ui.expanded' ng-click='toggleExpanded()')
+                i.fa.fa-chevron-circle-down(ng-show='!ui.expanded' ng-click='toggleExpanded()')
+                a(ng-click='toggleExpanded()') {{ui.expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
+            .section
                 button.btn.btn-primary(ng-disabled='inputForm.$invalid' ng-click='saveItem()') Save
                 button.btn.btn-primary(ng-show='backupItem._id' ng-disabled='inputForm.$invalid' ng-click='saveItemAs()') Copy
-                button.btn.btn-primary.btn-second(ng-show='backupItem._id' ng-click='removeItem()') Remove
+                button.btn.btn-primary(ng-show='backupItem._id' ng-click='removeItem()') Remove
+
