--- a/modules/control-center-web/src/main/js/views/settings/profile.jade
+++ b/modules/control-center-web/src/main/js/views/settings/profile.jade
@@ -44,7 +44,7 @@ block container
                                 label
                                     input(type='checkbox' ng-model='profileUser.changePassword')
                                     | Change password
-                        div(ng-show='profileUser.changePassword')
+                        div(ng-if='profileUser.changePassword')
                             .details-row
                                 +lbl('New password:')
                                 .col-sm-4
