IGNITE-843 WIP on metadata screen.

--- a/modules/control-center-web/src/main/js/views/configuration/metadata.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/metadata.jade
@@ -38,7 +38,6 @@ block content
         .padding-top-dflt
             button.btn.btn-primary(event-focus='defaultFocusId' ng-click='panels.activePanel = [0]; createItem()') Add metadata
             button.btn.btn-primary(ng-click='loadFromDb()') Load from database
-
         hr
         form.form-horizontal(name='inputForm' ng-if='backupItem' novalidate)
             .panel-group(bs-collapse data-allow-multiple='true')
@@ -51,6 +50,6 @@ block content
                             .settings-row(ng-repeat='field in group.fields')
                                 +form-row('backupItem')
         .section
-            button.btn.btn-primary(ng-disabled='manualForm.$invalid' ng-click='saveItem()') Save
+            button.btn.btn-primary(ng-disabled='inputForm.$invalid' ng-click='saveItem()') Save
             button.btn.btn-primary(ng-show='backupItem._id' ng-disabled='inputForm.$invalid' ng-click='saveItemAs()') Copy
             button.btn.btn-primary.btn-second(ng-show='backupItem._id' ng-click='removeItem()') Remove
